# iai_kinect2

kinect2_bridge/data/033870745147/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2_bridge/data/502442443142/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2_bridge/launch/: kinect2_bridge.launch  replay_and_record_kinect.launch  replay_config.rviz  replay_kinect.launch  replay_kinect_vm.launch
kinect2_bridge/src/: kinect2_bridge.cpp
kinect2_chkbd_posest/: CMakeLists.txt  README.md  package.xml
kinect2_chkbd_posest/src/: chkbd_posest.cpp
kinect2_plotpx/: CMakeLists.txt  package.xml  recordSleepData.sh
kinect2_plotpx/src/: plotpx.cpp
kinect2_registration/: CMakeLists.txt
kinect2_registration/include/kinect2_registration/: kinect2_color_registration.h
kinect2_registration/src/: color_registration_cpu.cpp  color_registration_cpu.h  kinect2_color_registration.cpp
