<?xml version="1.0"?>
<package>
    <name>kinect2_chkbd_posest</name>
    <version>0.0.1</version>
    <description>The kinect2_chkbd_posest package</description>

    <maintainer email="omer.rajput@tuhh.de">Omer Rajput</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rostime</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>compressed_image_transport</build_depend>
    <build_depend>compressed_depth_image_transport</build_depend>
    <build_depend>kinect2_bridge</build_depend>
    <build_depend>kinect2_calibration</build_depend>
    <build_depend>cv_bridge</build_depend><!-- Depend on cv_bridge instead of libopencv-dev to support ROS Hydro.-->
    <build_depend>tf</build_depend>
    <build_depend>rt_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rostime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>compressed_image_transport</run_depend>
    <run_depend>compressed_depth_image_transport</run_depend>
    <run_depend>cv_bridge</run_depend><!-- Depend on cv_bridge instead of libopencv-dev to support ROS Hydro.-->
    <run_depend>tf</run_depend>
    <run_depend>rt_msgs</run_depend>

    <export>
    </export>
</package>
